--- a/WebsiteBuildingJS/index4.html
+++ b/WebsiteBuildingJS/index4.html
@@ -9,3 +9,19 @@ Note: There are other types of documents, such as XML and SVG, that are also mod
 The DOM is a language-agnostic structure implemented by browsers to allow for web scripting languages, like JavaScript, to access, modify, and update the structure of an HTML web page in an organized way.
 
 For this reason, we like to think of the DOM as the link between an HTML web page and scripting languages. -->
+
+
+
+<!-- The DOM as a Tree Structure
+Tree-like modeling is used in many fields, including evolutionary science and data analytics. Perhaps you’re already familiar with the concept of family trees: these charts represent the familial relationships amongst the descendants of a given family name.
+
+The DOM tree follows similar logic to that of a family tree. A family tree is made up of family members and their relationships to the family name. In computer science, we would call each family member a node.
+
+We define a node as an intersecting point in a tree that contains data.
+
+In the DOM tree, the top-most node is called the root node, and it represents the HTML document. The descendants of the root node are the HTML tags in the document, starting with the <html> tag followed by the <head> and <body> tags and so on.
+
+Instructions
+The diagram to the right models the HTML document and labels the root element, which is the document.
+
+Observe the difference in the rectangular boxes and the curved boxes. These denote a difference in the types of nodes in the DOM structure. -->
