--- a/JavascriptUnitTesting/index.html
+++ b/JavascriptUnitTesting/index.html
@@ -14,3 +14,20 @@ This lesson will give you the knowledge and practice to discuss these concepts. 
 Define an automated test suite
 Describe how a test suite is used in software development
 Explain the benefits of automated testing -->
+
+<!-- Manual Testing
+Software testing is the process of assessing the completeness and quality of computer software. Usually this is done by running a part of a system (like a web application) and comparing the actual behavior to the expected behavior.
+
+One way to perform software testing is manual testing. Manual testing is a form of testing done by a human interacting with a system. With web apps, this might be clicking, dragging, and typing through a webpage. A list of actions and expected behaviors would be given. If the observed behavior doesn't match the expected behavior, the application has an error.
+
+Errors, like the ones you may have found in the provided web app, are also called bugs. A bug is an error, fault, or flaw in software that makes a system behave in unexpected ways. As you read in the last exercise, these unexpected behaviors can cause harm to users. Ideally testing catches bugs before they are sent to users.
+
+Instructions
+The same application is provided. As a manual test engineer for this app, you have been provided some features to test. Manually test the web app by following the list provided:
+
+Behavior 1: Run npm start in the terminal and reload the page. Scroll down and expect the webpage to start with a blank order.
+Behavior 2: Type a name and click "Place Order". Scroll down and expect "Deliver to:" to display the submitted name.
+Behavior 3: A blank name will not overwrite the existing name.
+Behavior 4: Select a cake type and place the order. Expect "Cake" to display the selected cake type.
+Behavior 5: Check some fillings. Expect "Fillings" to display your selected fillings.
+Behavior 6: Choose a stack size. Expect "Pancake Count:" to display the number equivalent to the stack size, e.g. "Double" is "2". -->
